--- a/NearColorChecker001/NearColorChecker001/MainWindow.xaml
+++ b/NearColorChecker001/NearColorChecker001/MainWindow.xaml
@@ -5,7 +5,7 @@
     <Grid>
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Target:"></TextBlock>
-                <TextBox Width="200" VerticalAlignment="Top" x:Name="TextBoxTargetFolder">c:\pictures</TextBox>
+                <TextBox Width="200" VerticalAlignment="Top" x:Name="TextBoxTargetFolder" TextChanged="TextBoxTargetFolder_TextChanged">c:\pictures</TextBox>
                 <Button Content="..." VerticalAlignment="Top" x:Name="ButtonTargetFolderSelect" Click="ButtonTargetFolderSelect_Click"></Button>
             <TextBlock Text="Trash:"></TextBlock>
             <TextBox Width="200" VerticalAlignment="Top" x:Name="TextBoxTrashFolder">c:\delme</TextBox>
