--- a/NearColorChecker001/NearColorChecker001/MainWindow.xaml
+++ b/NearColorChecker001/NearColorChecker001/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="NearColorChecker001.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" Closed="Window_Closed">
+        Title="MainWindow" Height="400" Width="525" Closed="Window_Closed">
     <Grid>
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="Target:"></TextBlock>
@@ -26,8 +26,8 @@
         <TextBox Margin="420,100,10,60" VerticalAlignment="Top" HorizontalAlignment="Right" Text="100" x:Name="TextBoxThreshold"  Width="80"></TextBox>
         <TextBlock Text="Output Filter:" Margin="420,130,10,60" HorizontalAlignment="Right"  ></TextBlock>
         <TextBox Margin="420,150,10,60" VerticalAlignment="Top" Text="" HorizontalAlignment="Right" Width="80" x:Name="TextBoxOutputFilter" ></TextBox>
-
-
+        <TextBlock Text="MonoThrethold" Margin="420,170,10,60" HorizontalAlignment="Right"  ></TextBlock>
+        <TextBox Margin="420,190,10,60" VerticalAlignment="Top" Text="10" HorizontalAlignment="Right" Width="80" x:Name="TextBoxMonoThreathold" ></TextBox>
 
         <TextBlock x:Name="TextBlockStatus" Text="Ready" Margin="420,24,20,120" VerticalAlignment="Bottom" HorizontalAlignment="Right"  TextWrapping="Wrap"></TextBlock>
         <Button Content="Skip This" Margin="0,0,0,54" Height="50" HorizontalAlignment="Right" VerticalAlignment="Bottom" x:Name="ButtonSkip" Click="ButtonSkip_Click" Width="97">
